SCRUM-111: Updated plan configurations with corrected configuration plan id and plan calculations with name